[package]
name = "file-events"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "detect changes to directories"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(any(target_os="linux", target_os="android"))'.dependencies]
inotify = { version = "0.9", default-features = false }

[target.'cfg(target_os="macos")'.dependencies]
fsevent = "2.1.2"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "serde"] }
